@@ -26,7 +26,7 @@
 
 
 #define APP_NAME "Konfyt"
-#define APP_VERSION "1.6.0"
+#define APP_VERSION "1.6.1-dev"
 #define APP_YEAR "2024"
 
 #define n2s(x) QString::number(x)
